fix: app color and alignment.

--- a/src/App.css
+++ b/src/App.css
@@ -1,1 +1,23 @@
 @import url("https://fonts.googleapis.com/css2?family=Fraunces:opsz,wght@9..144,700&family=Montserrat:wght@500;700&display=swap");
+
+
+
+body {
+  background-color: hsl(26, 40%, 92%);
+}
+
+#root {
+  /* background-color: hsl(26, 40%, 92%); */
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+#root section {
+  display: flex;
+}
+.content_wrapper {
+  background-color: hsl(0, 0%, 100%);
+}
+
